--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,12 @@ title: Shopify SEO
 title_separator: "-"
 description: >-
   Provident et neque. Et facilis asperiores beatae placeat eligendi. Accusantium fugiat autem. Quo magnam perferendis harum voluptatibus dicta sunt. Nemo sed dolore dolore sit nulla. Nesciunt recusandae et ut.
-lang: en
-language: English
+lang: zh-CN
+language: 简体中文
 email: hello@shopifyseo.net
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.shopifyseo.net" # the base hostname & protocol for your site, e.g. http://example.com
-domain: www.shopifyseo.net
+url: "https://cn.shopifyseo.net" # the base hostname & protocol for your site, e.g. http://example.com
+domain: cn.shopifyseo.net
 
 twitter: shopifyseo
 facebook: https://www.facebook.com/shopifyseok
