--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Shopify SEO
 title_separator: "-"
 description: >-
-  Provident et neque. Et facilis asperiores beatae placeat eligendi. Accusantium fugiat autem. Quo magnam perferendis harum voluptatibus dicta sunt. Nemo sed dolore dolore sit nulla. Nesciunt recusandae et ut.
+  致力于利用互联网前沿技术和潮流设计，帮助中国企业展现出专业独特的品牌形象，在全球竞争中独树一帜。
 lang: zh-CN
 language: 简体中文
 email: hello@shopifyseo.net
