--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1,14 +1,4 @@
-- title: Must Read
-  links:
-    - title: Seller Center
-      url: /blog/welcome
-    - title: Affiliate
-      url: /blog/welcome
-    - title: sitemap
-      url: /blog/welcome
-    - title: feed
-      url: /blog/welcome
-- title: Special Services
+- title: 必需阅读
   links:
     - title: 1
       url: /blog/welcome
@@ -18,7 +8,17 @@
       url: /blog/welcome
     - title: 4
       url: /blog/welcome
-- title: Shipping to
+- title: 特色服务
+  links:
+    - title: 1
+      url: /blog/welcome
+    - title: 2
+      url: /blog/welcome
+    - title: 3
+      url: /blog/welcome
+    - title: 4
+      url: /blog/welcome
+- title: 常见问题
   links:
     - title: 5
       url: /blog/welcome
